# wallposter-tg-bot

./: .env.dist  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __main__.py  config.py  misc.py
app/handlers/: __init__.py
app/handlers/callback/: __init__.py  common.py  posting.py  settings.py
app/handlers/error/: __init__.py  errors.py
app/handlers/user/: __init__.py  basic.py  input.py  media.py
app/middlewares/: __init__.py  acl.py  database.py
app/models/: __init__.py  base.py  channel.py  link.py  user.py  wallpaper.py
app/services/: __init__.py  logger.py  scheduler.py
app/utils/: callback_data.py  helper.py  keyboard.py  posting.py  states.py
migrations/: env.py
migrations/versions/: 86729abe3be1_initial_commit.py  a897b7a344ca_initial.py
