[tool.poetry]
name = "wallposter"
version = "1.1.0"
description = "Telegram bot for wallpaper channels."
authors = ["Daniil Kovalenko <lisen1510@gmail.com>"]
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.11.2"
envparse = "^0.2.0"
APScheduler = "^3.7.0"
pytz = "^2020.1"
gino = "^1.0.1"
alembic = "^1.4.3"
SQLAlchemy = "^1.3.20"
redis = "^3.5.3"
Pillow = "^8.1.0"
aioredis = "^1.3.1"
httpx = "^0.16.1"
psycopg2-binary = "^2.8.6"
uvloop = { version = "^0.14.0", optional = true }
ujson = { version = "^4.0.1", optional = true }
loguru = "^0.5.3"
Pyrogram = "^1.1.13"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.poetry.extras]
speedup = ["uvloop", "ujson"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
